update the link to presentation in readme.md

--- a/Final_Report.ipynb
+++ b/Final_Report.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Project Final Report\n",
     "\n",
-    "Name: Edward Chen  \n",
+    "Name: Edward (Yida) Chen  \n",
     "Class: CSCI 349 - Intro to Data Mining  \n",
     "Semester: Spring 2021  \n",
     "Instructor: Prof. Brian King"
