--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Project Modeling\n",
     "\n",
-    "Name: Edward Chen  \n",
+    "Name: Edward (Yida) Chen  \n",
     "Class: CSCI 349 - Intro to Data Mining  \n",
     "Semester: Spring 2021  \n",
     "Instructor: Prof. Brian King"
@@ -11781,7 +11781,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
